Practical ownership gate: real CIP-1852 derivation proof verified on-chain
The on-chain gate now verifies the REAL ownership statement — a Groth16 proof
of the full m/1852'/1815'/0'/0/0 derivation (19,075,097 constraints) from
root key to the address pkh — instead of the Poseidon-commitment stand-in.
Verified on Yaci DevKit:
tx 73495f35b390caaa62e407a9b97865ca7d04a40ebf12ac3a2ad2f3d74a259703, fee
~0.95 ADA (cost independent of circuit size; datum = 28 pkh-byte publics).

- OwnershipProofValidator: Julc Plutus V3 validator parameterized with the
  derivation circuit's VK.
- OwnershipCircuitService: compiles the circuit, persists/loads the proving
  key via Groth16PkStore (setup once ~47min, warm load ~2min), proves with a
  pluggable backend (~2min with blst multi-core, ADR-0029).
- OnChainOwnershipService: deploys the gate, locks (datum = pkh bytes),
  unlocks with the proof.
- OwnershipGateOnChainE2ETest (standalone main; gradle daemon dies on long
  heavy-heap runs) + DerivationProofBenchmark (ADR-0029 per-stage numbers:
  cold ~50min, warm ~4.5min: load 108s + prove 137s, peak ~70GB).
- README/javadoc: 19M measured (not ~90M), practical-run instructions.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>